fixing spacing issues

--- a/pages/styles/specify.css
+++ b/pages/styles/specify.css
@@ -42,7 +42,7 @@
 .editor {
     height: 99%;
     width: 100%;
-    font-size: 20px;
+    font-size: 14px;
     margin: 5px 0px;
     border: 2px solid #c3c3c3;
     border-radius: 24px;
@@ -54,8 +54,8 @@ div.tab {
     overflow: hidden;
     padding-left: 24px;
     padding-top: 4px;
-    padding-bottom: -8px;
-    margin-bottom: -4px;
+    padding-bottom: 0px;
+    margin-bottom: 0px;
 }
 
 .tab-btn {
@@ -68,8 +68,9 @@ div.tab {
     width: 100px;
     height: 40px;
     position: relative;
-    z-index: 1; 
-    margin-right: 20px;
+    z-index: 1;
+    font-size: 10pt;
+    margin-right: 40px;
     border-bottom: none;
 }
 
@@ -95,7 +96,7 @@ div.tab {
     position: absolute;
     content: "";
     top: -2px;
-    z-index: -1;    
+    z-index: -1;
 }
 
 .tab-btn:before {
